# asgmd05-hnw

./: README.md  pyproject.toml  requirements.txt
apps/: main.py
asgmd05_hnw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
models/: pipeline.pkl
reports/: model_performance.md  results.txt
src/: __init__.py  evaluate.py  features.py  ingest.py  pipeline.py  preprocess.py  train.py
utils_folder/: helper.py
