[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asgmd05_hnw"
version = "0.1.0"
description = "Spaceship Titanic Streamlit deployment using Logistic Regression pipeline."
authors = [
    { name = "Hazel Novero Winata" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["apps", "utils_folder", "models", "src"]